tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__config_test__config_about_tab.snap
---
source: tests/snapshot_tests/screens/config_test.rs
expression: backend
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│    Settings    General    Sync    Security    Password    About             │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"  ┌──────────────────────────────────────────────────────────────────────────┐  "
"  │   Some config changes require restart to take effect                    │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│  ▌  About                                                                    │"
"│  ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄   │"
"│     OpenKeyring / oak-keyring                                                │"
"│     Terminal password manager for local-first workflows.                     │"
"│     Local-first: vault stays on device unless you sync.                      │"
"│     Encrypted vault: secrets use authenticated encryption.                   │"
"│     Explicit sync: cloud and import/export stay user-controlled.             │"
"│     Version     0.7.3                                                        │"
"│     Authors     OpenKeyring Contributors                                     │"
"│     License     MIT OR Apache-2.0                                            │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ ↑↓ scroll  │ Tab/Shift+Tab switch  │ Enter confirm  │ Esc close [ Close ]    │"
"└──────────────────────────────────────────────────────────────────────────────┘"
