tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__config_test__config_dropdown_overlay.snap
---
source: tests/snapshot_tests/screens/config_test.rs
expression: backend
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│    Settings    General    Sync    Security    Password    About             │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"  ┌──────────────────────────────────────────────────────────────────────────┐  "
"  │   Some config changes require restart to take effect                    │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│  ▌  General                                                                  │"
"│  ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┌ Language ────────┐┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄   │"
"│           Language         │  ▌ Auto          │  [  auto  ▼  ]              │"
"│           Auto Lock        │    中文(简体)    │  [  300s  ▼  ]              │" Hidden by multi-width symbols: [(36, " "), (38, " "), (41, " "), (43, " ")]
"│           Clipboard Clear  │    English       │  [  30s  ▼  ]               │"
"│           Trash Auto-Delete└──────────────────┘  [  30d  ▼  ]               │"
"│           Animation                              [  Auto  ▼  ]              │"
"│                                                                              │"
"│                                                                              │"
"│  [    Import from Another M…  ]   [    Export Data...  ]                   │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ ↑↓ scroll  │ Tab/Shift+Tab switch  │ Enter confirm  │ Esc close [ Close ]    │"
"└──────────────────────────────────────────────────────────────────────────────┘"
