tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__config_test__config_general_tab.snap
---
source: tests/snapshot_tests/screens/config_test.rs
expression: backend
---
" Settings   General │ Sync │ Security │ Password │ About                        "
" ℹ Some config changes require restart to take effect                           "
"General                                                                         "
"Language                [ auto ▼ ]                                              "
"Auto Lock          [ 300s ▼ ]                                                   "
"Clipboard Clear        [ 30s ▼ ]                                                "
"Trash Auto-Delete    [ 30d ▼ ]                                                  "
"Animation          [ Auto ▼ ]                                                   "
"  [ Import from Another Manager... ]                                            "
"  [ Export Data... ]                                                            "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ↑↓ scroll  Tab switch  Enter confirm  Esc close   [ Close ]                    "
