tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__config_test__config_password_tab.snap
---
source: tests/snapshot_tests/screens/config_test.rs
expression: backend
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│    Settings    General    Sync    Security    Password    About             │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"  ┌──────────────────────────────────────────────────────────────────────────┐  "
"  │   Some config changes require restart to take effect                    │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│  ▌  Password Defaults                                                     █  │"
"│           Default Style                          [  Random  ▼  ]            │"
"│           Random Length                          [  16  ]                   │"
"│           Include Lowercase                      [  ✓ Enabled  ]            │"
"│           Include Uppercase                      [  ✓ Enabled  ]            │"
"│           Include Digits                         [  ✓ Enabled  ]            │"
"│           Include Symbols                        [  ✓ Enabled  ]            │"
"│           Memorable Words                        [  4  ]                    │"
"│           Capitalize Words                       [  ✓ Enabled  ]            │"
"│           Separator                              [  -  ▼  ]                 │"
"│           PIN Length                             [  6  ]                    │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ ↑↓ scroll  │ Tab/Shift+Tab switch  │ Enter confirm  │ Esc close [ Close ]    │"
"└──────────────────────────────────────────────────────────────────────────────┘"
