tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__config_test__config_security_tab.snap
---
source: tests/snapshot_tests/screens/config_test.rs
expression: backend
---
" Settings   General │ Sync │ Security │ Password │ About                        "
" ℹ Some config changes require restart to take effect                           "
"Security                                                                        "
"Health Check            [ ✓ Enabled ]                                           "
"Check Frequency            [ On Startup ▼ ]                                     "
"Master Password              [••••••••]        [ Change ]                       "
"Audit Logging            [ ✓ Enabled ]  [ View Log ]                            "
"Audit Retention        [ 365d ▼ ]                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ↑↓ scroll  Tab switch  Enter confirm  Esc close   [ Close ]                    "
