tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__config_test__config_sync_connected_state.snap
---
source: tests/snapshot_tests/screens/config_test.rs
expression: backend
---
" Settings   General │ Sync │ Security │ Password │ About                        "
" ℹ Some config changes require restart to take effect                           "
"Sync                                                                            "
"Sync Provider     [ Google Drive ▼ ]                                            "
"Sync Mode            [ Auto Sync ▼ ]                                            "
"Auto Sync Interval        [ 600s ▼ ]                                            "
"─────────────────────────────────────────────────────────────────────────────── "
"Auth Status           Authorized                                                "
"Last Synced           2026-05-20 12:30                                          "
"Action                [ Authorized ]                                            "
"Working Directory     /OpenKeyring                                              "
"[ Test Connection ]   Sync Status  ✓ Connected                                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ↑↓ scroll  Tab switch  Enter confirm  Esc close   [ Close ]                    "
