tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__config_test__config_sync_disconnected_auto_state.snap
---
source: tests/snapshot_tests/screens/config_test.rs
expression: backend
---
" Settings   General │ Sync │ Security │ Password │ About                        "
" ℹ Some config changes require restart to take effect                           "
"Sync                                                                            "
"Sync Provider     [ Google Drive ▼ ]                                            "
"Sync Mode            [ Auto Sync ▼ ]                                            "
"Auto Sync Interval        [ 300s ▼ ]                                            "
"─────────────────────────────────────────────────────────────────────────────── "
"Auth Status           Not authorized                                            "
"Action                [ Authorize ]                                             "
"Working Directory     /OpenKeyring                                              "
"[ Test Connection ]   Sync Status  ✗ Disconnected: OAuth token expired          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ↑↓ scroll  Tab switch  Enter confirm  Esc close  q exit   [ Exit Program ] [ Cl"
