tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__config_test__config_sync_manual_interval_disabled_state.snap
---
source: tests/snapshot_tests/screens/config_test.rs
expression: backend
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│    Settings    General    Sync    Security    Password    About             │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"  ┌──────────────────────────────────────────────────────────────────────────┐  "
"  │   Some config changes require restart to take effect                    │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│  ▌  Sync                                                                     │"
"│  ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄   │"
"│           Sync Provider                          [  Google Drive  ▼  ]      │"
"│           Sync Mode                              [  Manual Sync  ▼  ]       │"
"│           Auto Sync Interval                     [  1800s  ▼  ]             │"
"│  ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄   │"
"│  Auth Status           Not authorized                                        │"
"│  Action                [ Authorize ]                                         │"
"│  Working Directory     /OpenKeyring                                          │"
"│           Test Connection               [  Sync Status  ✗ Disconnected  ]   │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ ↑↓ scroll  │ Tab switch  │ Enter confirm  │ Esc close          [ Close ]     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
